feat: 添加 QQ 绑定功能，更新相关配置和监听器